# AVIV

./: .gitignore  LICENSE  README.md  gradle.properties  local.properties  settings.gradle.kts
README/: README_DE.md  README_ES.md  README_FR.md  README_IT.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  README_ZH.md
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: scattered_sounds.json  sounds_remote.json
app/src/main/cpp/: CMakeLists.txt  JniInterface.cpp
app/src/main/cpp/AudioEffect/: AudioEffectBase.h  AudioEffectManager.h  CreativeEffects.h  EqualizerEffect.h  InsulationEffect.h  ProfessionalEffects.h
app/src/main/cpp/AudioPlayFunc/: AudioEngine.cpp  AudioEngine.h  AudioTrack.cpp  AudioTrack.h
app/src/main/cpp/ffmpeg/: FFmpegDecoder.cpp  FFmpegDecoder.h
app/src/main/cpp/reverb/: ReverbEffect.cpp  ReverbEffect.h
app/src/main/cpp/spatial_audio/: SpatialAudioProcessor.cpp  SpatialAudioProcessor.h
app/src/main/java/com/bicy/whitenoise/: GyZa.kt  cFwL.kt  ws0X.kt
app/src/main/res/anim/: anim_fade_in_large.xml  anim_fade_out_large.xml  anim_slide_in_left.xml  anim_slide_in_right.xml  anim_slide_out_left.xml  anim_slide_out_right.xml  dialog_slide_in.xml  dialog_slide_out.xml  fade_in.xml
app/src/main/res/drawable/: ic_arrow_down.xml  ic_arrow_up.xml  ic_home.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml  ic_play.xml  ic_playlist.xml  ic_scattered.xml  ic_setting.xml
app/src/main/res/layout/: item_category.xml  item_playlist.xml
app/src/main/res/raw/: splash_animation.json
app/src/main/res/values/: dialog_styles.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/bicy/myapplication/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+98 files in other folders)
